...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m8Y-hL-7e8">
                                <rect key="frame" x="20" y="20" width="30" height="30"/>
                                <state key="normal" title="Left"/>
                                <connections>
                                    <action selector="leftDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qiN-0t-Ljk"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P29-bC-WWf">
                                <rect key="frame" x="319" y="20" width="36" height="30"/>
                                <state key="normal" title="Right"/>
                                <connections>
                                    <action selector="rightDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LVd-JM-6Re"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qjf-t1-k4z">
                                <rect key="frame" x="166.5" y="323" width="42" height="21"/>
...
